lib/tools/orbit/test_output/runcore_test.output
QStandardPaths: wrong permissions on runtime directory /run/user/1000/, 0755 instead of 0700
Flow compiler (3rd generation)

Processing 'orbit' on http server
done in 0.12s

tests/runcore_test.orb: tests/runcore_test.orb:14:11: Parse error
let arr = [1, 2, 3, 4, 5];
          ^
app->exec() == 1
